integration/tests/error_file_read_access.windows.err
error: File ReadAccess
  --> tests/error_file_read_access.hurl:2:6
   |
 2 | file,does_not_exist;
   |      ^^^^^^^^^^^^^^ File tests\does_not_exist can not be read
   |

